--- a/1. Rn中的线性方程组.md
+++ b/1. Rn中的线性方程组.md
@@ -1,426 +1,373 @@
-
-## 1.0 核心概念
-
-### 线性方程组
-
-- **定义**：多个形如 $a_1x_1 + \cdots + a_nx_n = b$ 的方程组合
-- **解的可能性**：无解、唯一解、无穷多解
-- **几何意义**：每个方程描述一个线性对象，解代表这些对象的交点
-
-### 向量空间
-
-- **基本定义**：n维向量是有序n元组 $(x_1,...,x_n)$，所有n维向量构成 $\mathbb{R}^n$
-- **基本运算**：加法（平行四边形法则）和数乘（向量拉伸）
-- **运算性质**：交换律、结合律、分配律等代数性质
-
-### 线性组合与张成
-
-- **线性组合**：$b = c_1a_1 + \cdots + c_ka_k$，其中$c_i$为权重
-- **张成空间**：$\text{span}\{a_1,...,a_n\}$是所有可能的线性组合集合
-- **核心关系**：线性方程组有解当且仅当$b$可表示为$a_1,...,a_n$的线性组合
-
-### 矩阵与向量的乘法
-
-- **定义**：$Ax = a_1x_1 + \cdots + a_nx_n$，表示矩阵列向量的线性组合
-- **性质**：满足分配律和结合律
-
-### 方程组解集
-
-- **齐次系统**：$Ax = 0$；至少有平凡解；解集是线性对象
-- **非齐次系统**：$Ax = b$，$b \neq 0$
-- **关键定理**：非齐次系统解集 = 一个特解 + 对应齐次系统解集
-
-### 线性独立性
-
-- **定义**：向量组${v_1,...,v_k}$线性独立当且仅当$c_1v_1 + \cdots + c_kv_k = 0$只有平凡解
-- **等价条件**：集合线性相关当且仅当至少一个向量可以表示为其他向量的线性组合
-
-### 线性映射
-
-- **定义**：满足加性和齐次性的映射$T: D \to W$
-- **矩阵表示**：每个线性映射$T: \mathbb{R}^n \to \mathbb{R}^m$都对应唯一矩阵$A$使得$T(x) = Ax$
-- **几何解释**：将线性对象映射为线性对象；保持原点不变
-
-## 重要应用
-
-### 二维平面的线性变换
-
-- **拉伸/压缩**：改变特定方向的尺度
-- **剪切**：使平行线保持平行但改变角度
-- **旋转**：绕原点旋转特定角度
-- **投影**：将向量投射到特定方向或子空间
-
-### 函数空间的线性映射
-
-- **在统计学中的应用**：求解回归问题 $Y = f(X) + \epsilon$
-- **本质**：在无限维函数空间中进行线性代数运算
-## 1.1 线性方程组
-
-**线性方程** - 描述的是多维空间中的"直线性"（=线性）对象
-
-- ax + by = c.
-
-	这里，我们将x, y ∈ R称为变量，a, b, c ∈ R称为方程的系数。系数a和b决定直线的斜率，c决定了直线从x-y平面原点的位移
-
-- ax + by + cz = d
-
-	将 x, y, z ∈ R 称为变量，a, b, c, d ∈ R 称为方程的系数。这个方程在三维空间 R³ 中描述的不是直线，而是一个**平面**。系数 a, b, c 组成了平面的法向量，决定了平面的方向（而不是斜率，斜率这个概念主要用于二维直线）。系数 d 决定了平面与原点的距离，也就是平面沿着法向量方向的位移。
-
-**定义 - 1**：一个在 $\mathbb{R}^n$ 中带有变量 $x_1, ..., x_n \in \mathbb{R}$ 和系数 $a_1, ..., a_n, b \in \mathbb{R}$ 的**线性方程**具有如下形式：
-
-						$a_1x1 + · · · + a_nx_n = b$
-
-线性方程组是**由多个这样的方程组合而成**的。
-
-
-**定义 - 2**：一个由 m 个方程和 n 个未知数 $x_1, ..., x_n$ 组成的**线性方程组 (LGS)** 具有如下形式：
-
-$a_{11}x_1 + ... + a_{1n}x_n = b_1$  
-$a_{21}x_1 + ... + a_{2n}x_n = b_2$  
-.  
-$a_{m1}x_1 + ... + a_{mn}x_n = b_m$  
-
-这个系统的解由一组值 $x_1, ..., x_n$ 组成，这些值使所有方程都成立。每个方程描述**一个线性对象**，而解 (x₁, ..., xₙ) 是这些对象的**交集**。这就提出了一个问题：**是否存在解？如果存在，有多少个？**
-
-**线性方程组等价** - 如果两个线性方程组具有相同的解
-
-- **约束变量**：我们将与主元对应的变量称为约束变量
-- **自由变量**：其他所有变量称为自由变量
-
-对于一般的线性方程组，也只有这三种可能性：
-
-- **没有解**：线性方程组没有解当且仅当通过基本行运算能够产生一个形如：（0 0 ... 0 | c）的零行（ c 不等于 0 ）
-- **恰好一个解**：一个可解的线性方程组**有唯一解**当且仅当**没有自由变量**
-- **无限多个解**：其它情况，它有无穷多解（例如，某一列没有自由变量）
-
-**特解和自由变量的系数向量**：
-
-**特解**：在线性方程组的解集中，特解（particular solution）是指通过将所有自由变量设为特定值（通常是0）而获得的一个具体解
-
-**系数向量**：在线性方程组的通解表示中，系数向量（coefficient vector）是与自由变量相关联的向量，表示当该自由变量变化时，解的各个分量如何变化
-
-
-
-
-**定义 - 1：** 一个n维向量是一个有序的n元组 x = (x₁, ..., xₙ)，其中x₁, ..., xₙ ∈ R是实数，称为分量
-
-**定义 - 2**：所有可能的n维向量的集合是 **n维实标准空间**  Rⁿ = {(x₁, ..., xₙ): x₁, ..., xₙ ∈ R}
-
-- 零向量 - （0，0，... )
-- 单位向量 - （0，0，...，1，0，0，...)
-- 向量相等 - $x = y \Leftrightarrow x_i = y_i$
-- 向量的 加法 和 数乘，加法的**平行四边形法则**，乘法是向量的 **拉伸**
-
-**运算性质**：
-
-- 加法交换律
-- 加法结合率
-- 零元的加法 - x + 0 = x
-- 负元的加法 - x + (-x) = 0
-- 乘法分配律 - c(x + y) = cx + cy，(c + d)x = cx + dx
-- 乘法结合律 - c(dx) = (cd)x
-- 单位元乘法 - 1x = x
-
-## 1.2 线性组合
-
-通过给定的几个向量，可以通过加法和与标量的乘法生成新的向量。
-
-**定义**：$b = c_1a_1 + ... + c_ka_k, c_1,...,c_k \in \mathbb{R}$，称 $c_i,...c_k$ 为 **权重**，可以将一般的线性方程组表示为向量方程，等价于具有增广系数矩阵的线性方程组：
-
-$x_1a_1 + ... + x_na_n = b$  等价于   $(a_1,...,a_n|b)$
-
-**线性方程组有解当且仅当**：b 可以表示为 $a1,...,a_n$ 的线性组合，我们将所有线性组合的集合称为**张成空间：** $span\{a_1,...,a_n\}$
-
-- 0 属于这个空间
-- $a_i$ 属于这个空间
-- b 属于这个空间 <==> 线性方程组$(a_1,...,a_n|b)$有解
-
-- 张成集合的**维数**不仅取决于向量 a₁,...,aₖ 的数量，**还取决于向量本身**
-- 零向量在任何张成空间中
-- 如果我们添加一个非零向量 a₁ ≠ 0，我们得到 a₁ 方向上的所有点
-- 如果再添加一个向量 a₂，只有当它不是 a₁ 的倍数时，才会扩展张成空间
-- 如果添加 a₃，只有当它不能被表示为 a₁ 和 a₂ 的线性组合时，才会扩展张成空间，依此类推
-
-## 1.3 矩阵和向量的乘法
-
-一个一般的线性方程组可以借助矩阵更紧凑地表示。
-
-**定义 - 1**：一个有m行n列的矩形表格，填充着实数 $a_{ij} \in \mathbb{R}$，我们称为 **(m x n)矩阵**，记作 $A \in \mathbb{R}^{m * n}$
-
-**定义 - 2**：$A \in \mathbb{R}^{m * n}$ 与 列向量 $a_1,...,a_n, n \in \mathbb{R}$ 的矩阵乘积定义为：
-
-Ax = $a_1x_1 + ... + a_nx_n$
-
-因此，Ax 是 A 中的列的线性组合，这也意味着 x 必须具有与 A 中列相同数量的分量个数。
-
-⎛1  2⎞⎛1⎞
-⎜3 -2⎟⎜4⎟
-⎝0  1⎠⎝3⎠   **这个乘积不存在，因为向量有三个分量，但是矩阵只有两列。**
-
-**定理 - 1**：设 $A \in \mathbb{R}^{m * n}, x,y \in \mathbb{R}^n, c \in \mathbb{R}$，
-
-- **分配律**：A(x + y) = Ax + Ay
-- **结合律**：A(cx) = c(Ax)
-
-**！！！定理 - 2**：设 $A \in \mathbb{R}^{m * n}$，以下陈述是等价的：（**注意，这里说的是陈述等价性，不代表陈述是对的**）
-
-- Ax = b 对于每个 $b \in \mathbb{R}^m$ 都有解
-- 每个$b \in \mathbb{R}^m$都是 A 的列的线性组合
-- $span\{a_1,...,a_n\} = \mathbb{R}^m$
-- A 的行阶梯形没有零行
-
-**注解**：A 的列向量是 m-维的， 它们的线性组合只能生成 $\mathbb{R}^m$ 的子空间，也就是 b 是 m-维 的。这里关键是是否针对所有 b 都有解？这里，我们暂时不关心这个都有解的条件，只谈命题等价性，即：**如果针对每一个m-维的b都有解，那说明 b 是A的列的线性组合，也可以说 b 属于由m-维的列向量张成的线性空间**。
-
-## 1.4 解集
-
-我们继续研究线性方程组的解集。除了解的数量外，我们现在想了解它们的形状。区分两种类型的系统是有意义的：**齐次和非齐次系统**。
-
-### 1.4.1 齐次系统
-
-**定义**：形如 Ax = 0 的线性方程组被称为**齐次**的。
-
-**定理 - 1**：一个齐次系统有非平凡解当且仅当存在至少一个自由变量。
-
-**定理 - 2**：齐次线性方程组的解集可以表示为 span{v₁,...,vₖ}，其中 v₁,...,vₖ 是向量。
-
-**线性方程组的解集总是可以表示为向量的线性张成**。由此可知，齐次线性方程组的解集要么只包含零点，要么是一条通过零点的直线/超平面，**无论哪种情况，解都是一个线性对象**。
-
-**齐次系统至少有一组平凡解（即全为0的向量）**
-### 1.4.2 非齐次系统
-
-**定义**：形如 Ax = b 且 b ≠ 0 的线性方程组被称为**非齐次**的
-
-**定理 - 1**：设 $L_h = \{x : Ax = 0\}$ 且 x₀ 是满足 Ax₀ = b 的向量。那么非齐次系统的所有解集为：
-
-$L_i = \{x_0 + x_h: x_h \in L_h\}$
-
-**非齐次线性方程组的通解可以表示为 一个特解 加上对应 齐次方程的通解，即：**
-
-**非齐次方程租的通解 = 一个特解 + 对应齐次方程的通解**
-
-**非唯一解的举例：** 考虑以下非齐次线性方程组：
-$$
-\begin{cases}
-x_1 + 2x_2 - x_3 = 4 \\
-2x_1 + x_2 + x_3 = 5
-\end{cases}
-$$
-这可以写成矩阵形式 $Ax = b$，其中：
-$$
-A = \begin{bmatrix} 1 & 2 & -1 \\ 2 & 1 & 1 \end{bmatrix}, \quad 
-x = \begin{bmatrix} x_1 \\ x_2 \\ x_3 \end{bmatrix}, \quad 
-b = \begin{bmatrix} 4 \\ 5 \end{bmatrix}
-$$
-
-**步骤 1**：**首先找出对应的齐次系统 $Ax = 0$ 的解集 $L_h$。**
-
-求解：
-$$
-\begin{cases}
-x_1 + 2x_2 - x_3 = 0 \\
-2x_1 + x_2 + x_3 = 0
-\end{cases}
-$$
-
-通过高斯消元：
-$$
-\begin{bmatrix} 1 & 2 & -1 \\ 2 & 1 & 1 \end{bmatrix} \to \begin{bmatrix} 1 & 2 & -1 \\ 0 & -3 & 3 \end{bmatrix} \to \begin{bmatrix} 1 & 2 & -1 \\ 0 & 1 & -1 \end{bmatrix}
-$$
-
-得到：
-$$
-\begin{cases}
-x_1 + 2x_2 - x_3 = 0 \\
-x_2 - x_3 = 0
-\end{cases}
-$$
-
-这意味着 $x_2 = x_3$，代入第一个方程：$x_1 + 2x_3 - x_3 = 0 \implies x_1 = -x_3$
-
-令 $x_3 = t$ (参数)，则齐次系统的解为：
-$$
-x_h = \begin{bmatrix} -t \\ t \\ t \end{bmatrix} = t\begin{bmatrix} -1 \\ 1 \\ 1 \end{bmatrix}, \quad t \in \mathbb{R}
-$$
-
-因此 $L_h = \{t\begin{bmatrix} -1 \\ 1 \\ 1 \end{bmatrix} : t \in \mathbb{R}\}$
-
-**步骤 2：** **寻找非齐次系统的一个特解 $x_0$。**
-
-回到原方程：
-$$
-\begin{cases}
-x_1 + 2x_2 - x_3 = 4 \\
-2x_1 + x_2 + x_3 = 5
-\end{cases}
-$$
-
-设 $x_3 = 0$，则：
-$$
-\begin{cases}
-x_1 + 2x_2 = 4 \\
-2x_1 + x_2 = 5
-\end{cases}
-$$
-
-解得：$x_1 = 2, x_2 = 1$
-
-所以一个特解是：$x_0 = \begin{bmatrix} 2 \\ 1 \\ 0 \end{bmatrix}$
-
-**步骤 3**：**根据定理，非齐次系统的所有解集为：**
-
-$$
-\begin{aligned}
-L_i &= \{x_0 + x_h: x_h \in L_h\} \\
-&= \left\{\begin{bmatrix} 2 \\ 1 \\ 0 \end{bmatrix} + t\begin{bmatrix} -1 \\ 1 \\ 1 \end{bmatrix} : t \in \mathbb{R}\right\} \\
-&= \left\{\begin{bmatrix} 2-t \\ 1+t \\ t \end{bmatrix} : t \in \mathbb{R}\right\}
-\end{aligned}
-$$
-
-这意味着原非齐次方程组的通解可以表示为：
-$$
-x = \begin{bmatrix} 2-t \\ 1+t \\ t \end{bmatrix}, \quad t \in \mathbb{R}
-$$
-
-**唯一解的举例**：
-
-非齐次线性方程组 $Ax = b$ ($b \neq 0$) 是否有唯一解取决于系数矩阵 $A$ 的性质，具体来说是矩阵的秩和列数的关系。
-
-**当且仅当对应的齐次方程组 $Ax = 0$ 只有零解时，非齐次方程组 $Ax = b$ 有唯一解**。根据定理，非齐次方程组的解集为：
-$$L_i = \{x_0 + x_h: x_h \in L_h\}$$
-如果 $L_h = \{\vec{0}\}$，那么 $L_i = \{x_0 + \vec{0}\} = \{x_0\}$，也就是说，解集只包含一个解 $x_0$。
-
-考虑以下非齐次线性方程组：
-$$
-\begin{cases}
-x_1 + 2x_2 = 5 \\
-3x_1 - x_2 = 1
-\end{cases}
-$$
-
-这可以写成矩阵形式 $Ax = b$，其中：
-$$
-A = \begin{bmatrix} 
-1 & 2 \\ 
-3 & -1 
-\end{bmatrix}, \quad 
-x = \begin{bmatrix} x_1 \\ x_2 \end{bmatrix}, \quad 
-b = \begin{bmatrix} 5 \\ 1 \end{bmatrix}
-$$
-
-首先计算 $Ax = 0$ 的解， 不难计算对应的齐次方程的 $L_h = \{\vec{0}\}$。
-
-现在求解原非齐次方程组：
-$$
-\begin{cases}
-x_1 + 2x_2 = 5 \\
-3x_1 - x_2 = 1
-\end{cases}
-$$
-
-非齐次方程组的唯一解为：$x_0 = \begin{bmatrix} 1 \\ 2 \end{bmatrix}$
-
-根据定理，原方程的解集为：
-$$L_i = \{x_0 + x_h: x_h \in L_h\} = \{x_0 + \vec{0}\} = \{x_0\} = \left\{\begin{bmatrix} 1 \\ 2 \end{bmatrix}\right\}$$
-
-## 1.5 线性独立性
-
-并不能直接确定解集是一条直线、一个平面或更高维的超平面。这与张成空间的定义有关。对于给定的向量v₁,...,vₖ，有可能span{v₁,...,vₖ} = span{v₁,...,vₖ₋₁}，这种情况发生在当vₖ可以表示为v₁,...,vₖ₋₁的线性组合时。也就是说：
-
-存在系数c₁,...,cₖ₋₁ ∈ ℝ，使得vₖ = c₁v₁ + ... + cₖ₋₁vₖ₋₁,
-
-或者等价地，
-
-0 = c₁v₁ + ... + cₖ₋₁vₖ₋₁ + cₖvₖ，其中cₖ = -1 ≠ 0。由于其重要性，这种情况有一个专门的名称
-
-**定义**：如果向量方程 x₁v₁ + ... + xₖvₖ = 0 **只有平凡解** x = 0， 我们这一组向量 v₁,...,vₖ ∈ ℝⁿ **线性独立**，否则，我们称这些向量**线性相关**。
-
-**定理**：一个集合M = {v₁, ..., vₖ}是线性相关的，当且仅当存在某个vⱼ ∈ M，使得vⱼ ∈ span(M \ {vⱼ})
-
-**举例**：v1 = （1，0），v2 = （0，1）
-
-根据定义，如果存在标量c1，c2，使得：c1v1 + c2v2 = 0，则只有当c1 = c2 = 0时候成立。
-
-**直观解释**：
-
-- 这两个向量分别对应 xx 轴和 yy 轴方向，无法通过缩放其中一个得到另一个
-- 它们张成的空间是整个二维平面，说明没有冗余的向量
-- 线性无关的向量能“扩展”出更大的空间
-
-如果：v1 = （1，2），v2 = （2，4），则 v2 = 2v1，此时，它们是线性相关的
-
-**注释：** 我们事先不知道哪个向量可以表示为其他向量的线性组合。为了检验独立性，证明的第一部分提示了一种简单的方法。从k = 2开始，**我们检查vₖ是否可以表示为前面向量v₁,...,vₖ₋₁的线性组合。**
-
-**其它性质**：
-
-- 如果我们将一个**线性相关的集合**{v₁,...,vₖ}**扩展**为{v₁,...,vₖ₊₁}，**它仍然是线性相关的**
-
-	1. 因为集合{v1,...,vk}线性相关，所以：c1v1 + ... + ckvk = 0， 其中{c1,...ck}不全为0
-	2. 扩展集合到{v1,...,vk,vk+1}，我们可以构造出一个线性组合 c1v1 + ... + ckvk + 0vk+1 = 0，可见，{c1,...ck,0} 不全为0
-	3. 因此，扩展出来的集合也是线性相关
-
-- 如果我们将一个**线性独立的集合**{v₁,...,vₖ}**缩减**为{v₁,...,vₖ₋₁}，**它仍然是线性独立的**
-
-	1. 假设集合{v1,...,vk}线性独立，缩减后的集合{v1,...,vk-1}是线性相关的，因此存在不全为0的集合{c1,...,ck-1}，使得 c1v1 +...+ ck-1vk-1 = 0
-	2. 考虑原始集合的一个线性组合 c1v1 + ... + ck-1vk-1 + 0vk = 0，这样，我们找到了一个非平凡的线性组合{c1,...,ck-1,0}(即ck = 0)，这就意味着{v1,...,vk}是线性相关的，和假设矛盾
-	3. 因此，线性独立的集合缩减后，仍然线性独立
-## 1.6 线性映射
-
-对于给定的矩阵 $A ∈ \mathbb{R}^{m×n}$，矩阵-向量乘积将每个向量 $x \in \mathbb{R}^n$ 变换为向量 $Ax \in \mathbb{R}^m$。通过这个变换，**可以定义一个映射/函数 T: ℝ^n → ℝ^m**，由 **T(x) = Ax** 给出。我们称这类映射为**线性映射**。
-
-**理解：通过一个 m x n 的矩阵，将 n-阶向量 变换为 m-阶向量，这也是一个函数映射。**
-
-### 1.6.1 一般线性映射
-
-**定义**：如果映射 T ： D -> W 满足以下条件，我们称这个映射为线性的：
-
-- **映射可加性**：对于所有$x,y \in D$，有 $T(x + y) = T(x) + T(y)$
-- **映射数乘性**：对于所有$c \in \mathbb{R}, x \in \mathbb{D}$，有 $T(cx) = cT(x)$
-
-**定理**：映射 $T: \mathbb{R}^n \rightarrow \mathbb{R}^m$ 是线性的，当且仅当存在唯一的矩阵：$A \in \mathbb{R}^{m × n}$， 使得对于所有的$x \in \mathbb{R}^n, T(x) = Ax$
-
-**从几何角度看，线性映射将直线形状的对象转换为其他直线形状的对象**。例如，如果我们对ℝⁿ中的一条直线上的所有点进行线性变换，我们会得到ℝᵐ中的另一条直线（或一个点）。
-
-**此外，如果原始集合包含零点，那么变换后的集合也包含零点。**
-
-### 1.6.2 线性映射 ℝ² → ℝ²
-
-一些线性变换在平面上的几何变换例子：
-
-$$A = \begin{bmatrix} a & b \\ c & d \end{bmatrix}$$
-其中，
-
-1. a - 控制 x 轴方向的拉伸和压缩，如果为负数，则为镜像（以y轴为对称的镜像）
-2. d - 控制 y 轴方向的拉伸和压缩，如果为负数，则为镜像（以x轴为对称的镜像）
-3. b - 控制水平剪切变换：将平面沿着水平方向”错位“的线性变换
-4. c - 控制垂直剪切变换：将平面沿着垂直方向”错位“的线性变换
-
-- **压缩和拉升**：对于$k \in \mathbb{R}$ $$A = \begin{bmatrix} k & 0 \\ 0 & 1 \end{bmatrix}$$
-- **剪切**：
-- **旋转**（围绕原点）：
-- **投影**：可以理解为压缩为0长度？
-
-### 1.6.3 函数空间的线性映射
-
-因为存在许多重要的线性映射是在非欧几里得空间之间进行的，其中最重要的例子是函数空间之间的映射。
-
-### 函数空间在统计学中的应用
-
-在现代统计学中，函数空间是不可或缺的概念，以回归问题为例：
-
-- 我们寻找函数 $f$，使得 $Y = f(X) + \epsilon$
-- 其中 $Y, X \in \mathbb{R}$ 是随机变量
-- $\epsilon$ 是噪声，满足 $\mathbb{E}[\epsilon | X] = 0$
-
-给定 $X = x$，我们可以通过 $f(x)$ 预测 $Y$，因为：  
-
-$\mathbb{E}[Y|X = x] = \mathbb{E}[f(x) + \epsilon|X = x] = f(x)$
-
-### 函数估计与线性代数
-
-在实际应用中，算法会从函数集合 $\mathcal{F}$ 中寻找一个估计函数 $\hat{f}$。通过线性代数的结果，我们可以更好地理解这些函数集合及相关算法。
-
-
-**举例**：
-
-**这里积分涉及到了勒贝格积分，暂时先不看，等学了勒贝格积分后再回头看。**
-
+# 矩阵运算与性质习题集
+
+## 一、选择题（单选）
+
+1. 下列关于矩阵乘法的说法中，错误的是：  
+    A. 矩阵乘法满足结合律  
+    B. 矩阵乘法满足交换律  
+    C. 矩阵乘法满足分配律  
+    D. 矩阵乘法中零矩阵是吸收元素
+    
+2. 设A是3×3矩阵，B是3×2矩阵，C是2×3矩阵，以下哪个矩阵乘积无法计算？  
+    A. AB  
+    B. BA  
+    C. AC  
+    D. CA
+    
+3. 对于一个n阶方阵A，如果det(A)=0，则：  
+    A. A一定可逆  
+    B. A一定不可逆  
+    C. A的所有元素都为0  
+    D. A的转置矩阵一定可逆
+    
+4. 若矩阵A满足A^2=A，则A被称为：  
+    A. 单位矩阵  
+    B. 幂等矩阵  
+    C. 对称矩阵  
+    D. 正交矩阵
+    
+5. 一个3×3矩阵通过初等行变换成为上三角矩阵，其对角线元素分别为2、-3、5，则原矩阵的行列式值为：  
+    A. -30  
+    B. 30  
+    C. -10  
+    D. 无法确定
+    
+
+## 二、选择题（多选）
+
+1. 以下哪些操作会改变矩阵的行列式值？（多选）  
+    A. 将矩阵的一行乘以非零常数  
+    B. 交换矩阵的两行  
+    C. 将矩阵的一行的k倍加到另一行  
+    D. 将矩阵转置
+    
+2. 关于可逆矩阵，以下说法正确的有：（多选）  
+    A. 如果A可逆，则A^T也可逆  
+    B. 如果A和B都可逆，则AB也可逆  
+    C. 如果A可逆，则det(A)≠0  
+    D. 如果A可逆，则A的列向量线性无关
+    
+3. 若A是n阶方阵，以下哪些条件等价于"A可逆"？（多选）  
+    A. det(A)≠0  
+    B. 齐次线性方程组Ax=0只有零解  
+    C. A的列向量线性无关  
+    D. A的简化行阶梯形为单位矩阵In
+    
+
+## 三、填空题
+
+1. 若A是m×n矩阵，B是n×p矩阵，则矩阵乘积AB的维度是________。
+    
+2. 矩阵$\begin{bmatrix} 1 & 2 \ 3 & 4 \end{bmatrix}$的行列式值是________。
+    
+3. 若矩阵A可逆，则$(A^T)^{-1}$=________。
+    
+4. 对角矩阵D的行列式等于________。
+    
+5. 若通过将矩阵A的第i行乘以k得到矩阵B，则det(B)=________det(A)。
+    
+
+## 四、计算题
+
+1. 计算矩阵乘积：$\begin{bmatrix} 1 & 2 \ 3 & 4 \end{bmatrix} \begin{bmatrix} 5 & 6 \ 7 & 8 \end{bmatrix}$
+    
+2. 计算矩阵$A = \begin{bmatrix} 2 & 1 & 0 \ 3 & 2 & 1 \ 1 & 1 & 0 \end{bmatrix}$的行列式。
+    
+3. 求矩阵$A = \begin{bmatrix} 1 & 2 \ 3 & 4 \end{bmatrix}$的逆矩阵。
+    
+4. 使用初等矩阵方法求$A = \begin{bmatrix} 1 & 2 & 3 \ 2 & 5 & 3 \ 1 & 0 & 8 \end{bmatrix}$的逆矩阵。
+    
+5. 设$A = \begin{bmatrix} 3 & 1 \ 2 & 2 \end{bmatrix}$，计算det(A^2)的值。
+    
+
+## 五、证明题
+
+1. 证明：对于任意n阶方阵A和B，det(AB) = det(A)·det(B)。
+    
+2. 证明：如果矩阵A的任意两行成比例，则det(A) = 0。
+    
+3. 证明：如果矩阵A是对称矩阵（即A^T = A），则A可以分解为形如BB^T的形式，其中B是一个矩阵。
+    
+4. 设A是n阶可逆矩阵，证明：det(A^{-1}) = 1/det(A)。
+    
+5. 证明：若n阶矩阵A满足A^2 = 0（零矩阵），则A不可逆。
+    
+
+## 六、应用题
+
+1. 线性变换T将向量(x,y)映射到(2x-y, x+y)。求表示此线性变换的矩阵A，并判断此变换是否可逆。如果可逆，求其逆变换矩阵。
+    
+2. 平面上有三个点(1,1)、(2,3)和(3,2)，求将这三个点分别映射到(2,1)、(1,4)和(5,1)的线性变换矩阵A（如果存在）。
+    
+3. 设线性方程组Ax = b有唯一解，其中A是n阶方阵，b是n维列向量。如果将A的第j列替换为b，得到新矩阵B，证明：det(B) = x_j·det(A)，其中x_j是方程组解向量x的第j个分量。
+    
+
+---
+
+# 答案与解析
+
+## 一、选择题（单选）答案
+
+1. B（解析：矩阵乘法不满足交换律，即通常情况下AB≠BA。矩阵乘法满足结合律(AB)C=A(BC)和分配律A(B+C)=AB+AC，(B+C)A=BA+CA，且零矩阵是乘法的吸收元素。）
+    
+2. B（解析：矩阵乘法要求左矩阵的列数等于右矩阵的行数。A是3×3，B是3×2，C是2×3。对于BA，B的列数是2，而A的行数是3，不满足条件，因此BA无法计算。）
+    
+3. B（解析：根据矩阵可逆的等价条件，det(A)=0当且仅当A不可逆（奇异矩阵）。）
+    
+4. B（解析：若矩阵A满足A^2=A，则A被称为幂等矩阵。单位矩阵是一种特殊的幂等矩阵，但不是所有幂等矩阵都是单位矩阵。）
+    
+5. A（解析：通过初等行变换中的行交换和行相加操作，矩阵的行列式值可能会改变。但是，最终上三角矩阵的行列式等于对角线元素的乘积，即2×(-3)×5 = -30。因为行交换会改变行列式的符号，而行相加不改变行列式的值，所以原矩阵的行列式值取决于行交换的次数。如果有偶数次行交换，则结果是-30；如果有奇数次行交换，则结果是30。但题目只说"通过初等行变换"，而不是"只通过行相加操作"，因此选A。）
+    
+
+## 二、选择题（多选）答案
+
+1. A、B（解析：
+    
+    - A正确：将矩阵的一行乘以非零常数k，行列式值会乘以k
+    - B正确：交换矩阵的两行，行列式值会变为原来的相反数
+    - C错误：将矩阵的一行的k倍加到另一行不改变行列式值
+    - D错误：矩阵转置不改变行列式值，即det(A) = det(A^T)）
+2. A、B、C、D（解析：这些都是可逆矩阵的基本性质。A^T可逆且(A^T)^(-1) = (A^(-1))^T；如果A和B都可逆，则(AB)^(-1) = B^(-1)A^(-1)；矩阵可逆等价于det(A)≠0；矩阵可逆等价于其列向量线性无关。）
+    
+3. A、B、C、D（解析：这些都是矩阵可逆的等价条件，根据矩阵可逆性的等价命题，这些条件互相等价。）
+    
+
+## 三、填空题答案
+
+1. m×p
+    
+2. -2（解析：det([1 2; 3 4]) = 1×4 - 2×3 = 4 - 6 = -2）
+    
+3. (A^(-1))^T
+    
+4. 对角线元素的乘积（解析：对于对角矩阵D = diag(d₁, d₂, ..., dₙ)，det(D) = d₁×d₂×...×dₙ）
+    
+5. k（解析：将矩阵的一行乘以常数k，行列式值也乘以k）
+    
+
+## 四、计算题答案
+
+1. 解：  
+    $\begin{bmatrix} 1 & 2 \ 3 & 4 \end{bmatrix} \begin{bmatrix} 5 & 6 \ 7 & 8 \end{bmatrix} = \begin{bmatrix} 1×5+2×7 & 1×6+2×8 \ 3×5+4×7 & 3×6+4×8 \end{bmatrix} = \begin{bmatrix} 5+14 & 6+16 \ 15+28 & 18+32 \end{bmatrix} = \begin{bmatrix} 19 & 22 \ 43 & 50 \end{bmatrix}$
+    
+2. 解：  
+    使用余子式展开法计算行列式det(A)：  
+    沿第三行展开：  
+    det(A) = 1×det([2 1; 1 0]) - 1×det([3 1; 1 0]) + 0×det([3 2; 2 1])  
+    = 1×(2×0-1×1) - 1×(3×0-1×1) + 0  
+    = 1×(-1) - 1×(-1) + 0  
+    = -1 + 1 = 0
+    
+    或者使用行变换法：  
+    将第一行的(-1)倍加到第三行：  
+    $\begin{bmatrix} 2 & 1 & 0 \ 3 & 2 & 1 \ 1 & 1 & 0 \end{bmatrix} \rightarrow \begin{bmatrix} 2 & 1 & 0 \ 3 & 2 & 1 \ -1 & 0 & 0 \end{bmatrix}$
+    
+    再将第一行的3倍加到第二行：  
+    $\begin{bmatrix} 2 & 1 & 0 \ 3 & 2 & 1 \ -1 & 0 & 0 \end{bmatrix} \rightarrow \begin{bmatrix} 2 & 1 & 0 \ 9 & 5 & 1 \ -1 & 0 & 0 \end{bmatrix}$
+    
+    然后将第一列的非主元元素清零：  
+    $\begin{bmatrix} 2 & 1 & 0 \ 0 & 5-9/2 & 1 \ 0 & 1/2 & 0 \end{bmatrix} = \begin{bmatrix} 2 & 1 & 0 \ 0 & 0.5 & 1 \ 0 & 0.5 & 0 \end{bmatrix}$
+    
+    行列式等于对角线元素的乘积：2×0.5×0 = 0
+    
+3. 解：  
+    使用公式法：对于2×2矩阵，逆矩阵为  
+    $A^{-1} = \frac{1}{det(A)} \begin{bmatrix} d & -b \ -c & a \end{bmatrix}$，其中det(A) = ad - bc
+    
+    det(A) = 1×4 - 2×3 = 4 - 6 = -2
+    
+    $A^{-1} = \frac{1}{-2} \begin{bmatrix} 4 & -2 \ -3 & 1 \end{bmatrix} = \begin{bmatrix} -2 & 1 \ 1.5 & -0.5 \end{bmatrix}$
+    
+4. 解：  
+    使用增广矩阵法求逆矩阵：  
+    $[A|I] = \begin{bmatrix} 1 & 2 & 3 & | & 1 & 0 & 0 \ 2 & 5 & 3 & | & 0 & 1 & 0 \ 1 & 0 & 8 & | & 0 & 0 & 1 \end{bmatrix}$
+    
+    通过一系列初等行变换将左侧变为单位矩阵：
+    
+    - R2 = R2 - 2R1：  
+        $\begin{bmatrix} 1 & 2 & 3 & | & 1 & 0 & 0 \ 0 & 1 & -3 & | & -2 & 1 & 0 \ 1 & 0 & 8 & | & 0 & 0 & 1 \end{bmatrix}$
+        
+    - R3 = R3 - R1：  
+        $\begin{bmatrix} 1 & 2 & 3 & | & 1 & 0 & 0 \ 0 & 1 & -3 & | & -2 & 1 & 0 \ 0 & -2 & 5 & | & -1 & 0 & 1 \end{bmatrix}$
+        
+    - R3 = R3 + 2R2：  
+        $\begin{bmatrix} 1 & 2 & 3 & | & 1 & 0 & 0 \ 0 & 1 & -3 & | & -2 & 1 & 0 \ 0 & 0 & -1 & | & -5 & 2 & 1 \end{bmatrix}$
+        
+    - R3 = -R3：  
+        $\begin{bmatrix} 1 & 2 & 3 & | & 1 & 0 & 0 \ 0 & 1 & -3 & | & -2 & 1 & 0 \ 0 & 0 & 1 & | & 5 & -2 & -1 \end{bmatrix}$
+        
+    - R2 = R2 + 3R3：  
+        $\begin{bmatrix} 1 & 2 & 3 & | & 1 & 0 & 0 \ 0 & 1 & 0 & | & 13 & -5 & -3 \ 0 & 0 & 1 & | & 5 & -2 & -1 \end{bmatrix}$
+        
+    - R1 = R1 - 3R3：  
+        $\begin{bmatrix} 1 & 2 & 0 & | & -14 & 6 & 3 \ 0 & 1 & 0 & | & 13 & -5 & -3 \ 0 & 0 & 1 & | & 5 & -2 & -1 \end{bmatrix}$
+        
+    - R1 = R1 - 2R2：  
+        $\begin{bmatrix} 1 & 0 & 0 & | & -40 & 16 & 9 \ 0 & 1 & 0 & | & 13 & -5 & -3 \ 0 & 0 & 1 & | & 5 & -2 & -1 \end{bmatrix}$
+        
+    
+    因此，  
+    $A^{-1} = \begin{bmatrix} -40 & 16 & 9 \ 13 & -5 & -3 \ 5 & -2 & -1 \end{bmatrix}$
+    
+5. 解：  
+    首先计算det(A)：  
+    det(A) = 3×2 - 1×2 = 6 - 2 = 4
+    
+    方法一：使用公式det(A^2) = (det(A))^2  
+    det(A^2) = (det(A))^2 = 4^2 = 16
+    
+    方法二：直接计算A^2再求行列式  
+    $A^2 = \begin{bmatrix} 3 & 1 \ 2 & 2 \end{bmatrix} \begin{bmatrix} 3 & 1 \ 2 & 2 \end{bmatrix} = \begin{bmatrix} 9+2 & 3+2 \ 6+4 & 2+4 \end{bmatrix} = \begin{bmatrix} 11 & 5 \ 10 & 6 \end{bmatrix}$
+    
+    det(A^2) = 11×6 - 5×10 = 66 - 50 = 16
+    
+
+## 五、证明题答案
+
+1. 证明：  
+    我们用两种方法证明det(AB) = det(A)·det(B)：
+    
+    方法一：利用初等矩阵的性质
+    
+    任何可逆矩阵A都可以表示为有限个初等矩阵的乘积：A = E₁E₂...Eₖ  
+    对于每个初等矩阵Eᵢ，有det(EᵢB) = det(Eᵢ)·det(B)
+    
+    依次应用这个性质：  
+    $det(AB) = det(E₁E₂...EₖB) = det(E₁)·det(E₂...EₖB) = ... = det(E₁)·det(E₂)·...·det(Eₖ)·det(B) = det(E₁E₂...Eₖ)·det(B) = det(A)·det(B)$
+    
+    方法二：利用行列式的定义和性质
+    
+    我们可以证明，对于任何矩阵A和B，即使A或B不可逆，det(AB) = det(A)·det(B)也成立。
+    
+    如果A或B不可逆，则det(A) = 0或det(B) = 0，此时det(AB) = 0 = det(A)·det(B)
+    
+    如果A和B都可逆，则AB也可逆，且(AB)⁻¹ = B⁻¹A⁻¹
+    
+    利用行列式的余子式展开定义，可以直接验证对于2×2和3×3矩阵，det(AB) = det(A)·det(B)成立
+    
+    对于更高阶矩阵，可以使用数学归纳法证明。
+    
+2. 证明：  
+    假设矩阵A的第i行和第j行成比例，即存在非零常数k，使得A的第i行 = k×(A的第j行)
+    
+    考虑计算det(A)：当我们沿着任意行或列展开行列式时，需要计算所有可能的排列组合。
+    
+    在每一种情况下，都需要从每行选择一个元素，然后计算这些元素的乘积（考虑适当的符号）。
+    
+    由于第i行和第j行成比例，任何包含第i行和第j行元素的排列组合都会出现两次，一次从第i行选择，一次从第j行选择，但符号相反（因为行指标不同会导致符号变化）。
+    
+    因此，所有的项都会两两抵消，最终det(A) = 0。
+    
+    另一种简单的证明方法：  
+    如果第i行是第j行的k倍，我们可以进行初等行变换，将第i行减去第j行的k倍，得到一个新的矩阵B，其第i行全为0。根据行变换性质，det(A) = det(B)。而B有一行全为0，所以det(B) = 0，因此det(A) = 0。
+    
+3. 证明：  
+    设A是n阶对称矩阵，则A^T = A
+    
+    我们可以利用矩阵的特征分解。由于A是对称矩阵，根据谱定理，A可以正交对角化：  
+    A = PDP^T
+    
+    其中P是正交矩阵（即P^TP = I），D是对角矩阵，对角线上是A的特征值λ₁, λ₂, ..., λₙ
+    
+    考虑对角矩阵D的平方根矩阵D^(1/2)，它是一个对角矩阵，对角线上的元素是√λᵢ（如果λᵢ < 0，可以使用复数）
+    
+    令B = PD^(1/2)，则  
+    $BB^T = PD^(1/2)(PD^(1/2))^T = PD^(1/2)(D^(1/2))^TP^T = PDP^T = A$
+    
+    因此，A可以分解为BB^T的形式。如果要求B是实矩阵，则需要A是半正定矩阵（所有特征值非负）。
+    
+4. 证明：  
+    设A是n阶可逆矩阵，则A^(-1)存在，且AA^(-1) = A^(-1)A = I
+    
+    根据行列式的乘法性质，det(AA^(-1)) = det(A)·det(A^(-1))
+    
+    而det(AA^(-1)) = det(I) = 1
+    
+    因此，det(A)·det(A^(-1)) = 1，即det(A^(-1)) = 1/det(A)
+    
+5. 证明：  
+    设A是n阶矩阵，且A^2 = 0
+    
+    假设A可逆，则存在A^(-1)使得AA^(-1) = A^(-1)A = I
+    
+    两边同时左乘A，得：  
+    A^2A^(-1) = A
+    
+    由于A^2 = 0，所以：  
+    0·A^(-1) = A  
+    0 = A
+    
+    这与A可逆矛盾（可逆矩阵不能是零矩阵）。
+    
+    因此，A不可逆。
+    
+
+## 六、应用题答案
+
+1. 解：  
+    线性变换T将(x,y)映射到(2x-y, x+y)
+    
+    将这个变换表示为矩阵形式：  
+    $T\begin{pmatrix} x \ y \end{pmatrix} = \begin{pmatrix} 2x-y \ x+y \end{pmatrix} = \begin{pmatrix} 2 & -1 \ 1 & 1 \end{pmatrix} \begin{pmatrix} x \ y \end{pmatrix}$
+    
+    因此，表示此线性变换的矩阵A = $\begin{pmatrix} 2 & -1 \ 1 & 1 \end{pmatrix}$
+    
+    判断是否可逆：  
+    det(A) = 2×1 - (-1)×1 = 2 + 1 = 3 ≠ 0，所以A可逆
+    
+    求逆变换矩阵：  
+    $A^{-1} = \frac{1}{det(A)} \begin{pmatrix} 1 & 1 \ -1 & 2 \end{pmatrix} = \frac{1}{3} \begin{pmatrix} 1 & 1 \ -1 & 2 \end{pmatrix} = \begin{pmatrix} \frac{1}{3} & \frac{1}{3} \ -\frac{1}{3} & \frac{2}{3} \end{pmatrix}$
+    
+    逆变换将(x,y)映射到$(\frac{x+y}{3}, -\frac{x-2y}{3})$
+    
+2. 解：  
+    设线性变换由矩阵A表示，则需要满足：  
+    $A\begin{pmatrix} 1 \ 1 \end{pmatrix} = \begin{pmatrix} 2 \ 1 \end{pmatrix}$，  
+    $A\begin{pmatrix} 2 \ 3 \end{pmatrix} = \begin{pmatrix} 1 \ 4 \end{pmatrix}$，  
+    $A\begin{pmatrix} 3 \ 2 \end{pmatrix} = \begin{pmatrix} 5 \ 1 \end{pmatrix}$
+    
+    检查这三个点是否共线：如果三个点共线，则只有两个线性无关的向量，无法唯一确定一个线性变换。
+    
+    计算向量$(2,3)-(1,1) = (1,2)$和$(3,2)-(1,1) = (2,1)$，这两个向量不共线（不成比例），所以三个点不共线。
+    
+    设$A = \begin{pmatrix} a & b \ c & d \end{pmatrix}$，代入条件：
+    
+    $\begin{pmatrix} a & b \ c & d \end{pmatrix} \begin{pmatrix} 1 \ 1 \end{pmatrix} = \begin{pmatrix} 2 \ 1 \end{pmatrix}$ 得 $a+b=2, c+d=1$
+    
+    $\begin{pmatrix} a & b \ c & d \end{pmatrix} \begin{pmatrix} 2 \ 3 \end{pmatrix} = \begin{pmatrix} 1 \ 4 \end{pmatrix}$ 得 $2a+3b=1, 2c+3d=4$
+    
+    由$a+b=2$和$2a+3b=1$，解得$a=5, b=-3$
+    
+    由$c+d=1$和$2c+3d=4$，解得$c=-1, d=2$
+    
+    验证第三个条件：  
+    $\begin{pmatrix} 5 & -3 \ -1 & 2 \end{pmatrix} \begin{pmatrix} 3 \ 2 \end{pmatrix} = \begin{pmatrix} 15-6 \ -3+4 \end{pmatrix} = \begin{pmatrix} 9 \ 1 \end{pmatrix} \neq \begin{pmatrix} 5 \ 1 \end{pmatrix}$
+    
+    因此，不存在满足所有三个条件的线性变换矩阵A。
+    
+    事实上，线性变换必须保持原点不变，如果想要将三个任意点精确映射到三个目标点，通常需要使用仿射变换而非线性变换。
+    
+3. 解：  
+    设Ax = b有唯一解，则A可逆，det(A) ≠ 0
+    
+    设A的第j列为a_j，则A = [a₁, a₂, ..., a_j, ..., a_n]
+    
+    将A的第j列替换为b得到的新矩阵B = [a₁, a₂, ..., b, ..., a_n]
+    
+    由于Ax = b有唯一解，设解向量为x = (x₁, x₂, ..., x_n)^T，则：  
+    b = Ax = x₁a₁ + x₂a₂ + ... + x_ja_j + ... + x_na_n
+    
+    利用行列式的线性性质（对任一列进行线性组合，行列式也按相同方式线性组合），有：
+    
+    det(B) = det([a₁, a₂, ..., b, ..., a_n])  
+    = det([a₁, a₂, ..., x₁a₁ + x₂a₂ + ... + x_ja_j + ... + x_na_n, ..., a_n])
+    
+    将b展开，利用行列式的多线性性质：
+    
+    det(B) = x₁det([a₁, a₂, ..., a₁, ..., a_n]) + x₂det([a₁, a₂, ..., a₂, ..., a_n]) + ... + x_jdet([a₁, a₂, ..., a_j, ..., a_n]) + ... + x_ndet([a₁, a₂, ..., a_n, ..., a_n])
+    
+    当矩阵中有两列相同时，行列式为零，所以上式中除了第j项外，其他项都为0：
+    
+    det(B) = x_jdet([a₁, a₂, ..., a_j, ..., a_n]) = x_jdet(A)
+    
+    因此，det(B) = x_j·det(A)，证毕。
