--- a/6. 二次型与奇异值分解.md
+++ b/6. 二次型与奇异值分解.md
@@ -168,24 +168,170 @@ $Q(x) = x^T Ax = y^T Λy = \Sigma_{i=1}^n λ_iy_i^2$
 - 这提供了一种几何直观的理解特征值的方式
 
 ...
+想象你有一个对称矩阵A，我们想找它的特征值。变分刻画告诉我们：**特征值实际上是某些优化问题的答案**。
 
+## 核心思想
+
+对于一个n×n的对称矩阵A，它的特征值可以这样理解：
+
+**最大特征值**：在所有长度为1的向量中，找一个向量x，使得x^T A x（二次型）达到最大值。这个最大值就是最大特征值，而达到最大值的那个向量就是对应的特征向量。
+
+用数学语言写就是：λ₁ = max{x^T A x : ||x||=1}
+
+## 瑞利商
+
+这里有个重要概念叫瑞利商（Rayleigh quotient）：R(x) = (x^T A x)/(x^T x)
+
+瑞利商的含义很直观：它衡量了向量x经过矩阵A变换后，"能量"放大了多少倍。变分刻画告诉我们，瑞利商的最大值就是最大特征值，最小值就是最小特征值。
+
+## 一个直观的例子
+
+想象一个椭圆，它的方程是x^T A x = 1。椭圆的最长轴方向就对应最大特征值的特征向量，轴的长度与特征值成反比。最短轴对应最小特征值。这样，找特征值就变成了找椭圆主轴的问题，这就是一个几何上的优化问题。
+
+**总之，变分刻画把"解方程"的代数问题转化为"找最值"的优化问题，让我们从另一个角度理解特征值的本质。**
+
+
+**定理**：设 $A \in \mathbb{R}^{n \times n}$ 是对称矩阵，其特征值按从大到小的方式排列为 $\lambda_1 \geq \lambda_2 \geq ...\geq \lambda_n$，则有：
+
+		$\lambda_n = min_{||x|| = 1}x^TAx \leq max_{||x|| = 1}x^TAx = \lambda_1$
+
+- 可以理解为 函数 $f(x_1,...,x_n)$ 在 $||\{x_1,...,x_n\}|| = 1$ 的时候，函数值最小，最小值就是最小的特征值，最大值就是最大的特征值
+
+你可以把 f(x) = x^T A x 看作一个定义在 ℝⁿ 上的函数，其中 x = (x₁, x₂, ..., xₙ)^T。这个定理告诉我们：
+
+**在所有单位球面上的点**（即满足 ||x|| = 1 的所有向量），这个函数 f(x) = x^T A x：
+
+- 取到最大值时，最大值恰好等于最大特征值 λ₁
+- 取到最小值时，最小值恰好等于最小特征值 λₙ
+
+![[75840a7b-905e-4044-bcdc-34d6fbfe608a.png]]
+
+$Q(x) = 3x_1^2 + 7x_2^2$
+
+- 给定 $x_1,x_2$，如果满足 $||\{x_1,x_2\}|| = 1$，即图形下面坐标轴上的圆型的边缘，对应的函数值也就是右侧图形的红色值。
+- 函数值最大的部分就是7，最小的是3，是二次型的特征值3和7
+
+![[cd144977-04dd-4f90-b312-26a7b0e22473.png]]
+
+对二次型进行正交变换后，不改变向量长度，因此 $||y|| = ||x|| = 1$
+
+
+**定理**：**Courant-Fischer 极小极大定理**（Min-Max Theorem）
+
+![[5359f32d-0db0-4325-b0fe-94e8726adf4b.png]]
 
 #### 1.4 奇异值分解（SVD）
 
 
 特征值的变分表述虽然只适用于对称矩阵，但现在将证明它在更广泛的范围内也很有用。我们已经充分探讨了二次矩阵对角化的用处和认识价值。特别优美的是**通过正交矩阵进行对角化**，遗憾的是这只对**对称矩阵**可行。我们自然也希望**对任意的 (m × n) 矩阵**有类似的东西。
 
-事实上这是可能的：有多种方式将矩阵 A ∈ ℝᵐˣⁿ 分解为 A = PDQ⁻¹，其中 D 是"对角"的，P 和 Q 是可逆的。其中最有用的可能是所谓的奇异值分解（英文：singular value decomposition/SVD）。在这种分解中，P 和 Q 都是正交矩阵。
+事实上这是可能的：
 
-其思想是模仿特征值分解的一个重要解释。如果 A 是对称的，λ 是绝对值最大的特征值，那么相应的特征向量给出了变换 A 拉伸最强的方向。绝对值第二大的特征值对应的特征向量给出了一个与第一个向量正交的方向，在这个方向上 A 拉伸第二强。绝对值最小的特征值对应的特征向量给出了 A 压缩最强的方向。如果 A ∈ ℝᵐˣⁿ 不是方阵，我们现在也可以寻找这样的方向，只是不再得到特征向量了。
+- 有多种方式将矩阵 A ∈ ℝᵐˣⁿ 分解为 A = PDQ⁻¹，其中 D 是"对角"的，P 和 Q 是可逆的。其中最有用的可能是所谓的奇异值分解（英文：singular value decomposition/SVD）。在这种分解中，P 和 Q 都是正交矩阵。
+
+- 其思想是模仿特征值分解的一个重要解释。如果 A 是对称的，λ 是绝对值**最大**的特征值，那么相应的特征向量给出了变换 A **拉伸最强的方向**。绝对值第二大的特征值对应的特征向量给出了一个与第一个向量正交的方向，在这个方向上 A 拉伸第二强。**绝对值最小的特征值对应的特征向量给出了 A 压缩最强的方向**。如果 A ∈ ℝᵐˣⁿ 不是方阵，我们现在也可以寻找这样的方向，只是不再得到特征向量了。
 
 这在图 6.3 中有所说明，左边是单位球面，右边是经过 A ∈ ℝ²ˣ³ 变换后的像。在球面上，所有向量 x ∈ ℝ³ 都有相同的长度。但经过变换后，有些向量的长度比其他的更大。长度最大的向量是 y = (18, 6)，长度最小的是 y = (3, -9)。我们可以用两种方式描述这些"方向"：作为满足 Ax = y 的 x ∈ ℝ³，或者通过 y ∈ ℝ² 本身。这两个视角就给出了分解中的矩阵 P 和 Q。我们将在下面将这个想法形式化。
 
 
 
+### 对称矩阵的美好世界 ✨
+
+- **特征值分解**：A = PΛP^T（P正交，Λ对角）
+- **几何意义**：特征向量是"主轴"，特征值是"拉伸倍数"
+- **限制**：只适用于方阵，且要对称才能正交对角化
+
+### 现实的需求 🎯
+
+但实际中我们经常遇到：
+
+- **非方阵**：比如 100×50 的数据矩阵
+- **非对称矩阵**：大多数矩阵都不对称
+
+问题：能否找到类似的"漂亮"分解？
+
+## SVD的核心思想：寻找最大拉伸方向
+
+### 直观理解：矩阵是"变形器" 🔄
+
+想象矩阵 A 是一个"变形器"：
+
+1. **输入**：n维空间的单位球（所有长度为1的向量）
+2. **输出**：m维空间的椭球
+
+### 关键观察 👁️
+
+当我们用 A 变换单位球时：
+
+- 有些方向被**拉长**了很多
+- 有些方向被**压缩**了
+- 有些方向可能**介于两者之间**
+
+### 两个视角 🔍
+
+对于"最大拉伸"这件事，我们可以问：
+
+1. **输入视角**：哪个输入向量 v ∈ ℝⁿ 被拉伸最多？
+2. **输出视角**：输出空间中哪个方向 u ∈ ℝᵐ 对应最大拉伸？
+
+这就给出了SVD的两组正交向量！
+
+
+**原始坐标 → $V^T$ 旋转 → $Σ$ 拉伸 → U 旋转 → 新坐标**
+
+
+![[a899498b-39df-431e-b173-53567f9b9b99.png]]
+
+**将任意矩阵分解**
+
+$M = U \cdot \Sigma \cdot V^T$
+
+- U - 旋转
+- ∑ - 拉伸 对角元素表示拉升强度
+- $V^T$ - 旋转
+
+意义：找到一组基，在线性变换后，基还是正交的（垂直）
+![[98c32268-ef08-43d5-8f12-ab7489416dd9.png]]
+
+- V - 原始的标准正交基
+- U - 经过M变换后的标准正交基
+
+正交矩阵转置就是逆
+
+![[95874bde-5e17-485d-8f40-35376a0ac7ec.png]]
+
+取前r个奇异值（从大到小）
+
+特征值平方根就是奇异值 西格玛
+
+
+![[ec9b93f8-606a-44a9-8961-55d3ecc6ee99.png]]
+
+u v 是归一化的特征向量，从大到小排列
+
+![[d07b399f-415a-4b64-94f0-9042e46ec0d9.png]]
+
+
+半正定对角矩阵 - 伸缩变换
+正交矩阵 - 旋转变换
+
+![[81f09a89-58bd-440d-9ff1-99ec520e34b7.png]]
+
+
+![[19cce278-87c1-4f30-a657-ec40366c8db8.png]]![[9a2bdd1f-e9c6-4099-9c19-9f023e31aaaa.png]]
+
+实对称矩阵 -- 一定对角化
+
+一般矩阵  AA^T = 实对称矩阵
+
+A = PSQ^T
+
+PQ是正交矩阵，PP^T = I QQ^T = I
+
+AA^T = PSQ^T  x  (PSQ^T)^T = PS^2P^T
+A^TA = QS^2Q^T
 
 
 
-
-
+![[86a6a159-1b11-48fe-b2e9-ae860dfdf7cd.png]]
 
