--- a/7. 其它.md
+++ b/7. 其它.md
@@ -1,2 +1,121 @@
 P149 - 168   9.14
 
+### 1. 矩阵的迹
+
+**定义 7.1.1.** 一个 $n \times n$ 阶**方阵** $A \in \mathbb{R}^{n \times n}$ 的**迹**（英文：trace）定义为对角线元素之和：
+
+				$tr(A) = \Sigma_{i=1}^n a_{ii}$
+
+对于**非方阵**，迹是没有定义的，迹本身实际上没有几何或其他特别有意义的解释，但它经常能让公式写得更紧凑。
+
+**定理 7.1.2.**
+
+- **转置性质**：$tr(A) = tr(A^T)$
+
+- **线性性质**：对于所有 $c_1, c_2 \in \mathbb{R}$ 和 $A, B \in \mathbb{R}^{n \times n}$，有  $\text{tr}(c_1 A + c_2 B) = c_1 \text{tr}(A) + c_2\text{tr}(B)$
+
+- **交换性质**：对于所有 $A \in \mathbb{R}^{m \times n}, B \in \mathbb{R}^{n \times m}$，有  $\text{tr}(AB) = \text{tr}(BA)$
+
+- **循环性质**：对于具有相容维数的 $A, B, C$，$\text{tr}(ABC) = \text{tr}(CAB) = \text{tr}(BCA)$
+
+- 迹在基变换下不变：对于可逆的 $P \in \mathbb{R}^{n \times n}$ 和 $A \in \mathbb{R}^{n \times n}$，有$\text{tr}(PAP^{-1}) = \text{tr}(A)$
+
+- 对于 $A$ 的实特征值 $\lambda_1, \ldots, \lambda_n$，有 $\text{tr}(A) = \sum_{i=1}^{n} \lambda_i$
+
+### 2. 矩阵范数
+
+#### 2.1 Frobenius范数
+
+弗罗贝尼乌斯范数（Frobenius范数）是矩阵的一种范数，定义为矩阵所有元素的平方和的平方根。
+
+**定义**：对于矩阵 A，其Frobenius范数记作 $‖A‖_F$，计算公式为：$||A||_F = \sqrt{\Sigma_i\Sigma_j a_{ij}^2} = \sqrt{tr(A^TA)}$
+
+**举例**：矩阵 $\begin{bmatrix} 1 & 2  \\3 & 5 \end{bmatrix}$，求Frobenius范数
+
+- $1^2 + 2^2 + 3^2 + 4^2 = 30$
+- 范数 = $\sqrt{30}$
+#### 2.2 矩阵范数
+
+**定义** 矩阵范数 $|| \cdot || : \mathbb{R}^{m \times n} \to [0, \infty)$ 是一个满足以下性质的**函数**：
+
+- 对于所有 $A, B \in \mathbb{R}^{m \times n}$ 和 $c \in \mathbb{R}$，有
+
+1. **正定性**：$||A|| = 0 \Leftrightarrow A = 0_{m \times n}$ 
+    
+2. **绝对齐次性**：$||cA|| = |c| ||A||$
+    
+3. **三角不等式**：$||A + B|| \leq ||A|| + ||B||$ 
+    
+#### 2.3 从向量范数派生的矩阵范数
+
+1. 首先将矩阵转换为向量形式：
+
+![[eb43804b-2ff0-4911-be51-6e13e0ea323d.png]]
+
+**举例**：$\begin{bmatrix} 1 & 2  \\3 & 5 \end{bmatrix}$ **转换为向量** $\begin{pmatrix} 1 & 3 & 2 & 4 \end{pmatrix}$
+
+2. 计算范数：
+
+	- $p$ - **范数** ： $||x||_p = (\Sigma_{i=1}^n |x_i|^p)^{\frac{1}{p}}, p \in [1,\infty]$
+	- **Frobenius 范数**：$||A||_F := \sqrt{\Sigma_i\Sigma_j a_{ij}^2}$
+	- **和范数**：$||A||_S := \Sigma_i\Sigma_j |a_{ij}|$
+	- **最大值范数**：$||A||_M = max_{1 \leq i,j \leq}|a_{ij}|$
+
+#### 2.4 算子范数
+
+**定义**：设 $|| · ||_V$ 是 $\mathbb{R}^n$ 上的一个范数，那么我们定义 由 $|| · ||_V$ 诱导的 **算子范数** 为：
+
+$||A||_V = max_{x \ne 0} \frac{||Ax||_V}{||x||_V} = max_{||x||_V = 1}||Ax||_V$
+
+其中，$$R_A(x) = \frac{||Ax||_V}{||x||_V}$$
+- 被称为 **瑞丽商**，它比较变换前向量 x 的长度 $||x||_V$ 与变换后的长度 $||Ax||_V$。
+- 如果这个商很大，则表示向量被强烈拉伸
+- 如果它很小，则表示向量被强烈压缩
+- 算子范数就是所有向量上这个商的最大值
+- **右下角的 $V$ 代表使用特定的向量范数 $|| \cdot ||$ ，例如欧几里得范数，1 - 范数等**
+- **通俗语言表达**：算子范数是 在所有非零向量x中，矩阵A **最大** 能将向量"**放大**"多少倍
+
+**常见范数的计算公式**：
+
+- **2-范数（欧几里得范数）**：$||A||_2 := max_{||x||_2 = 1 ||Ax||_2} = \sigma_{max}(A) = \sqrt{\lambda_{max}(A^TA)}$       
+	- 也叫 **谱范数**（Spektralnorm）
+	- 欧几里得范数下，变换矩阵 $A$ 的最大范数是 $A^TA$ **方阵** 的 **最大特征值的平方根**
+
+- **1-范数**：$||A||_1 := max_{||x||_1 = 1}||Ax||_1| = max_{1 \leq j \leq n} \Sigma_{i=1}^m |a_{ij}|$ （**绝对值范数/曼哈顿范数**）
+	- 也叫 **列和范数**（Spaltensummennorm）
+	- 1-范数定义为 **所有元素绝对值之和**
+	- 计算方法：求每一列元素绝对值之和，取最大值
+
+- **$\infty$ 范数（最大绝对值范数/切比雪夫范数）：** $||A||_{\infty} := max_{||x||_{\infty} = 1}||Ax||_{\infty} = max_{1 \leq i \leq n}\Sigma_{j = 1}^n |a_{ij}|$ 
+	- 也叫 **行和范数**（Zeilensummennorm）
+	- **计算方法**：求每一行元素绝对值之和，取最大值
+
+**例子**：
+
+- 矩阵 $A = \begin{bmatrix} 3 & 1  \\2 & 2 \end{bmatrix}$ 在 **2-范数** 下向量 $(1,0)^T$ 的瑞丽商
+	1. 计算 $Ax = (3,2)^T$
+	2. 计算 $||Ax||_2 = \sqrt{13}$
+	3. 计算 $||x||_2 = 1$
+	4. 所以，$R_1((1,0)^T) = \sqrt{13}$
+
+- 矩阵 $A = \begin{bmatrix} 3 & 1  \\2 & 2 \end{bmatrix}$ 在 **1-范数** 下向量 $(1,0)^T$ 的瑞丽商
+	1. 计算 $Ax = (3,2)^T$
+	2. 计算 $||Ax||_1 = |3| + |2| = 5$
+	3. 计算 $||x||_1 = 1$
+	4. 所以，$R_1((1,0)^T) = 5$
+	5. 即变换后的 ”长度“ 是 变换前的 “长度” 的5倍
+
+
+#### 2.5 等价性
+
+**定义**：我们称 $\mathbb{R}^{m \times n}$ 上两个范数 $||\cdot||_a$，$||\cdot||_b$ 是等价的，如果存在常数 $c,C \in (0,\infty)$，使得所有的 $A \in \mathbb{R}^{m \times n}$，有：$c||A||_a \leq ||A||_b \leq C||A||_a$
+
+- **有界变换**：一个范数可以通过乘以常数转化为另一个范数的上下界。这意味着在分析算法收敛性或稳定性时，可以使用最方便的范数。
+- **拓扑等价性**：这种等价关系保证了在两种范数下，"小"的矩阵和"大"的矩阵是一致的。如果一个矩阵序列在一个范数下收敛，它在等价范数下也会收敛。
+
+
+
+
+
+
+
